<!-- NEVER CHANGE VALUES IN values.xml DIRECTLY!!! DO IT HERE, OR ELSE BUILD FAILS! -->

<resources>
    <string name="app_name">FoodDepot</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_search">e.g. Apple</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_search">Search</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="drawer_open">R.string.drawer_open</string>
    <string name="drawer_close">R.string.drawer_close</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_open_box">Open Box</string>
    <string name="action_switch_map_list">Switch: Map/List</string>
    <string name="currently_map_mode_set_to_list">Switch to List</string>
    <string name="currently_list_mode_set_to_map">Switch to Map</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_settings">Settings</string>
    <string name="action_edit_profile">Profile</string>
    <string name="action_sell">Sell</string>
    <string name="action_save">Save</string>
    <string name="action_activate_beacon">Listen to FoodBeacons</string>
    <string name="action_deactivate_beacon">Ignore FoodBeacons</string>
    <string name="label_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="label_profile">Settings</string>
    <string name="title_activity_profile">Settings</string>


    <!-- Strings related to Settings -->

    <string name="pref_personal_settings_title">Personal Information (not visible to other users)</string>
    <string name="pref_title_first_name">First Name</string>
    <string name="pref_title_last_name">Last Name</string>
    <string name="pref_title_email">E-Mail</string>

    <string name="pref_notify_title">Allow us to notify you when something interesting happens</string>
    <string name="pref_summary_notify_food">We will notify you if your favorite food appears in a box close to you</string>
    <string name="pref_title_notify_food">Favorite Food</string>
    <string name="pref_summary_notify_box">We will notify you when the boxes you frequent are filled up</string>
    <string name="pref_title_notify_box">Favorite Boxes</string>
    <string name="pref_summary_notify_new">We will notify you about new offers in your region.</string>
    <string name="pref_title_notify_new">New Items</string>

    <string name="pref_category_delete_account">We would miss you, but ...</string>
    <string name="pref_summary_delete_account">All of your data will be lost</string>
    <string name="pref_title_delete_account">Delete Account</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_open_box">OpenBoxActivity</string>









    <!-- List View Strings -->
    <string name="food_content_description">Box Content</string>
    <string name="expand_list_details">Show Details</string>
    <string name="dummy_price">0 EUR</string>
    <string name="dummy_distance">0m</string>
    <string name="myown_dummyfruit">Dummy</string>
    <string name="dummy_string">####</string>
    <string name="details">DETAILS</string>

    <!-- TAB items:  -->
    <string name="tab_name">Name</string>
    <string name="tab_price">Price</string>
    <string name="tab_distance">Distance</string>
    <string name="tab_rating">Rating</string>

    <!-- Single Box Details Activity And Fragment Strings:-->
    <string name="box_activity">Box Details</string>
    <string name="box_photo">Box Photo</string>
    <string name="apfel_placeholder_text">Mittelgroßer, rotgelber Speiseapfel. Köstlicher, süß-säuerlicher, würziger Geschmack. Angenehmer Biss, aber auch zum Kochen gut geeignet. Es gibt noch weitere Sorten wie beispielsweise Jonagored, Rubinstar, Marnica, Jomured und viele andere.\n\n\nHerkunftsland: Deutschland, Italien, Südafrika\n\nHandelsklasse: 1\n\nSaison: ganzjährig</string>
    <string name="owner">Owner:</string>
    <string name="location">Location:</string>
    <string name="directions">Directions</string>
    <string name="reserve">Reserve</string>
    <string name="dummy_depot_name">Tante Emma Laden</string>
    <string name="dummy_weight">2.23 kg</string>
    <string name="dummy_temp">24 °C</string>
    <string name="no_smell">No smell</string>
    <string name="category_colon">Category:</string>
    <string name="price_colon">Price:</string>
    <string name="share_depot">Share Depot</string>
    <string name="bookmark_depot">Bookmark Depot</string>
    <string name="show_profile">Show Profile</string>


    <string name="servicedesc">FD open box service</string>
    <string name="aiddescription">FD open box service</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_public_settings_title">Puplic Profile Settings (visible to other users)</string>
    <string name="pref_profile_pic">Profile Picture</string>
    <string name="pref_title_password">Password</string>
    <string name="saved_profile_username"/>
    <string name="saved_profile_firstname"/>
    <string name="saved_profile_lastname"/>
    <string name="saved_profile_email"/>
    <string name="saved_profile_password"/>
    <string name="dummy_content">FruitMix</string>
    <string name="dummy_expiration">Expires in: 10 hours</string>
    <string name="dummy_owner">doedel_1995</string>
    <string name="dummy_ratingcount">(12)</string>
    <string name="dummy_stars">*****</string>
    <string name="action_activate_speech">Activate Speech Control</string>
    <string name="action_deactivate_speech">Deactivate Speech Control</string>

</resources>
