<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_personal_settings_title"
        android:key="pref_key_personal_settings">
        <EditTextPreference
            android:key="pref_key_first_name"
            android:title="@string/pref_title_first_name"
            android:defaultValue="" />
        <EditTextPreference
            android:key="pref_key_last_name"
            android:title="@string/pref_title_last_name"
            android:defaultValue="" />
        <EditTextPreference
            android:key="pref_key_email"
            android:title="@string/pref_title_email"
            android:defaultValue="" />
        <EditTextPreference
            android:key="pref_key_password"
            android:title="@string/pref_title_password"
            android:defaultValue="" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_public_settings_title"
        android:key="pref_key_public">
        <EditTextPreference
            android:key="pref_key_username"
            android:title="@string/pref_title_username"
            android:defaultValue="" />
        <Preference
            android:key="pref_profile_pic"
            android:title="@string/pref_profile_pic"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_delete_account"
        android:key="pref_key_delete_account_settings">
        <Preference
            android:key="pref_delete_account"
            android:summary="@string/pref_summary_delete_account"
            android:title="@string/pref_title_delete_account"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>