<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_notify_title"
        android:key="pref_key_notification_settings">
        <CheckBoxPreference
            android:key="pref_key_notify_food"
            android:summary="@string/pref_summary_notify_food"
            android:title="@string/pref_title_notify_food"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_key_notify_box"
            android:summary="@string/pref_summary_notify_box"
            android:title="@string/pref_title_notify_box"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_key_notify_new"
            android:summary="@string/pref_summary_notify_new"
            android:title="@string/pref_title_notify_new"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>