<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/group_primary_items">
        <item
            android:id="@+id/nav_switch_map_list"
            android:icon="@drawable/ic_map_list"
            android:title="@string/currently_list_mode_set_to_map" />
        <item
            android:id="@+id/nav_activate_beacon"
            android:icon="@drawable/user_location_marker"
            android:title="@string/action_activate_beacon" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_face"
            android:title="@string/action_edit_profile" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_edit_settings" />
    </group>
</menu>
