<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutWidget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:background="#55000000" >

    <!--WIDTH AND HEIGHT ARE DETERMINED BY MINWIDTH AND MINHEIGHT IN APPWIDGET-PROVIDER XML-->
    <!--DIFFERENT DIMENS NEEDED BECAUSE PRE 4.0 NEEDS 8DP MARGIN, WHILE POST 4.0 ADDS MARGIN AUTOMATICALLY-->

    <ImageView
        android:layout_alignParentStart="true"
        android:id="@+id/imageViewFruitWidget"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/food_content_description"
        android:src="@drawable/ic_fruit_dummy"/>

    <TextView
        android:layout_toEndOf="@+id/imageViewFruitWidget"
        android:layout_alignBaseline="@+id/imageViewFruitWidget"
        android:id="@+id/textViewNameWidget"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/dummy_depot_name" >
    </TextView>

    <TextView
        android:id="@+id/textViewContentWidget"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignStart="@+id/textViewNameWidget"
        android:layout_below="@+id/textViewNameWidget"
        android:padding="5dp"
        android:text="@string/dummy_content">
    </TextView>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayoutPriceDistanceWidget"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:padding="1dp">

        <TextView
            android:id="@+id/textViewPriceWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/dummy_price"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDistanceWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/dummy_distance" />
    </LinearLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewTimeLeftWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:text="@string/dummy_expiration"/>

        <TextView
            android:id="@+id/textViewOwnerNameWidget"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toStartOf="@+id/ratingBarWidget"
            android:padding="5dp"
            android:text="@string/dummy_owner"/>

        <TextView
            android:id="@+id/ratingBarWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            style="@android:style/TextAppearance.Medium"
            android:layout_toStartOf="@+id/ratingCountWidget"
            android:text="@string/dummy_stars" />

        <TextView
            android:id="@+id/ratingCountWidget"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:text="@string/dummy_ratingcount" />
    </RelativeLayout>
</RelativeLayout>