<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".boxes.BoxesActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_margin="30dp">

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayoutSortList"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_name"
                android:text="@string/tab_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_price"
                android:text="@string/tab_price"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_distance"
                android:text="@string/tab_distance"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_rating"
                android:text="@string/tab_rating"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/fragment_boxes_container" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_mylocation"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>
